Fixing gap between project cells.

--- a/styles.css
+++ b/styles.css
@@ -65,7 +65,7 @@ p {
 
 .container {
     position: relative;  
-    width:100%;
+    width:90%;
 }
 .container:before {
   content:"";
